remove legacy slash commands (#397)